--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ data-0="border-top: 0px #fff;
             I'm currently a student of Web Design &#38; Development at YooBee in Auckland. 
             I love creating things people can use which make their lives better, 
             even in a small way.<br><br>
-            Some notable achivements include an IT award in high school, 
+            Some notable achievements include an IT award in high school, 
             my design being used on the school diary, and completing a Diploma of Creative Advertising and the subsequent internship.<br><br>
             Aside from technology and design, I'm interested in anything creative, travel and music.
         <br><br><br>
@@ -486,7 +486,7 @@ data-0="border-top: 0px #fff;
 
         <div class="about-text">
             Email me at 
-            <a href="mailto:bronte_a@hotmail.co.nz?Subject=Portfolio%20Message" target="_top">bronte_a@hotmail.co.nz</a>, find me on 
+            <a href="mailto:bronte_a@hotmail.co.nz?Subject=Portfolio%20Message" target="_top">bronte_a@hotmail.co.nz</a>,<br>find me on 
 <a href="https://github.com/bronte-a/" target="_blank">GitHub</a> &
 <a href="https://twitter.com/bronte_a_" target="_blank">Twitter,</a>  or
 <a href="http://blog.bronteadshead.com/" target="_blank">read my blog.</a>
