--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ data-0="border-top: 0px #fff;
             <img src="images/skills1.png" width="100%" />
         </div>
 
-        <strong>Other Skills:</strong><br>
+        <h4>Other Skills:</h4><br>
         Graphic Design, Copy Writing, Advertising, Social 
         Media Marketing, Video Editing, Problem Solving, Illustrator and Indesign.
 
