--- a/index.html
+++ b/index.html
@@ -375,7 +375,10 @@ data-0="border-top: 0px #fff;
         <h4>Other Skills:</h4><br>
         Graphic Design, Copy Writing, Advertising, Social 
         Media Marketing, Video Editing, Problem Solving, Illustrator and Indesign.
-
+        
+        <div class = "buttons2">
+        <a href="http://bronte-a.github.io/my-cv/" target="_blank"><div class="visit2" style="height:auto;">READ MY CV</div></a>
+        </div>
 
          </div>
 
