--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ data-0="border-top: 0px #fff;
 
 <script type="text/javascript" src="js/skrollr.min.js"></script>
     <script type="text/javascript">
-    var s = skrollr.init();
+    var s = skrollr.init({forceHeight: false});
     </script>
 
 <script src="js/custom.js"></script>
