--- a/index.html
+++ b/index.html
@@ -359,7 +359,9 @@ data-0="border-top: 0px #fff;
 
 
         <div class="about-text" style="font-size:13pt;">
-            I'm currently a student of Web Design &#38; Development at YooBee in Auckland. 
+            I'm currently a Creative Producer at Mediaworks in Auckland.
+            <!--
+            I'm currently a student of Web Design &#38; Development at YooBee in Auckland. -->
             I love creating things people can use which make their lives better, 
             even in a small way.<br><br>
             Some notable achievements include an IT award in high school, 
