--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <![endif]-->
 
 
+<div id="name"><img src="https://cloud.githubusercontent.com/assets/7624898/8223277/fc760684-15c9-11e5-8c35-b181bbfcb17e.png" /></div>
+
 
 <div data-start="position:fixed;"
 
