--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 background-size: 100vw;
                 background-repeat: repeat-x;
             }
+            
+            #name {
+                margin: 300px auto 0 auto;
+            }
 
 
         </style>
