--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 background-image: url('https://cloud.githubusercontent.com/assets/7624898/8223223/7aa92226-15c9-11e5-9ccf-0c5816f744e2.jpg');
                 background-size: 100vw;
                 background-repeat: repeat-x;
+                background-color: #f6d6f7;
             }
             
             #name {
